<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/facebook_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B5A99">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="logo"
            android:src="@drawable/logo"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="50dp">
            <TextView
                style="@style/language_config"
                android:textColor="@color/faded_white"
                android:text="@string/current_language"/>
            <TextView
                style="@style/language_config"
                android:textColor="@color/faded_white"
                android:text="."
                tools:ignore="HardcodedText" />
            <TextView
                style="@style/language_config"
                android:textColor="@color/white"
                android:text="@string/change_language"
                android:clickable="true"/>

        </LinearLayout>

        <EditText
            android:id="@+id/user"
            style="@style/input_field"
            android:autofillHints=""
            android:hint="@string/user_field"
            android:inputType="text"
            android:backgroundTint="@color/faded_white"/>

        <EditText
            android:id="@+id/password"
            style="@style/input_field"
            android:autofillHints=""
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:backgroundTint="@color/faded_white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:text="@string/sign_in_button"
            android:textColor="@color/faded_white"
            style="@style/custom_button"
            app:cornerRadius="0dp"
            app:backgroundTint="@color/heavy_faded_white" />

        <TextView
            android:id="@+id/signUpText"
            style="@style/small_text"
            android:text="@string/sign_up_suggestion"
            android:layout_marginTop="75dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/forgotText"
            style="@style/small_text"
            android:text="@string/forgot_password_suggestion"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            >
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/faq"
                android:scaleType="centerInside"
                android:scaleX="0.4"
                android:scaleY="0.4"
                android:src="@drawable/help" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>